ide50 (95) 2015; urgency=medium

  * update submit50 dependence version
  * adds temporary /usr/local/bin/sudo

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 19 Jan 2017 10:30:00 -0400

ide50 (94) 2015; urgency=high

  * use fpm to build this package
  * enables alias expansion with sudo
  * runs apache as ubuntu instead of www-data
  * removes ubuntu from group www-data

 -- CS50 <sysadmins@cs50.harvard.edu>  Sun, 21 Dec 2016 20:35:00 -0400

ide50 (93) 2015; urgency=medium

  * update dependences of lib50-python and phpliteadmin
  * override user's umask with sudo

 -- CS50 <sysadmins@cs50.harvard.edu>  Sat, 29 Oct 2016 09:45:00 -0400

ide50 (92) 2015; urgency=high

  * suppress CS50 compilation flags while installing python modules

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 27 Oct 2016 13:35:00 -0400

ide50 (91) 2015; urgency=medium

  * install Flask and SQLAlchemy after ide50 proper

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 27 Oct 2016 12:35:00 -0400

ide50 (90) 2015; urgency=medium

  * update lib50-python dependence

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 27 Oct 2016 11:15:00 -0400

ide50 (89) 2015; urgency=medium

  * update phpliteadmin dependence
  * make shell function for flask POSIX Bourne shell friendly

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 27 Oct 2016 10:15:00 -0400

ide50 (88) 2015; urgency=medium

  * update lib50-python dependence
  * add sqlite3 alias
  * add phpliteadmin, php5-sqlite, sqlite3 recommendations
  * add envariables and shell function for flask

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 27 Oct 2016 00:30:00 -0400

ide50 (87) 2015; urgency=medium

  * add python3-tk to recommends list of packages
  * update ~cs50/pset6 python solutions

 -- CS50 <sysadmins@cs50.harvard.edu>  Sat, 22 Oct 2016 22:15:00 -0400

ide50 (86) 2015; urgency=medium

  * set ~cs50/pset6{smile,tweets} permissions after package installation

 -- CS50 <sysadmins@cs50.harvard.edu>  Sat, 22 Oct 2016 19:00:00 -0400

ide50 (85) 2015; urgency=medium
